--- a/complete-javascript-course-master/4-DOM-pig-game/starter/style.css
+++ b/complete-javascript-course-master/4-DOM-pig-game/starter/style.css
@@ -2,6 +2,21 @@
 *** GENERAL
 **********************************************/
 
+.goal-score{
+    position: absolute;
+    left:50%;
+    transform: translateX(-50%);
+    top:520px;
+    color:#555;
+    font-size: 18px;
+    font-family: 'Lato';
+    text-align: center;
+    padding:10px;
+    width:160px;
+    text-transform: uppercase;
+}
+.goal-score:focus{outline:none;}
+
 * {
     margin: 0;
     padding: 0;
@@ -140,15 +155,24 @@ i {
 .btn-new { top: 45px;}
 .btn-roll { top: 403px;}
 .btn-hold { top: 467px;}
+.btn-score{top:120px;}
+.input-score{top:80px;}
 
 .dice {
     position: absolute;
     left: 50%;
-    top: 178px;
+    top: 148px;
     transform: translateX(-50%);
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
-
+.dice2 {
+    position: absolute;
+    left: 50%;
+    top: 250px;
+    transform: translateX(-50%);
+    height: 100px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
 .winner { background-color: #f7f7f7; }
 .winner .player-name { font-weight: 300; color: #EB4D4D; }
